Update CSS styles

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <h1>MINI PROJECTS</h1>
     <div class="grid-menu">
       <div class="choice">
         <a href="GuessTheNumber/index.html">Guess My Number</a>
